@@ -3,9 +3,12 @@
     = image_tag avatar_icon(todo.author_email, 40), class: 'avatar s40', alt:''
 
     .todo-title
-      %span.author_name
-        = link_to_author todo
-      %span.todo_label
+      %span.author-name
+        - if todo.author
+          = link_to_author(todo)
+        - else
+          (removed)
+      %span.todo-label
         = todo_action_name(todo)
         = todo_target_link(todo)
 
